# protobuf-python-demo

./: ADDRESS_BOOK_SAMPLE_FILE  README.md  pb_sample.py  print_text_format.py  pyproject.toml  read_a_message.py  write_a_message.py
